<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context="com.helloarron.tpandroid.activity.main.MainActivity">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/line"
        android:layout_below="@+id/title_bar"></FrameLayout>

    <View
        android:id="@+id/line"
        style="@style/line_horizontal"
        android:layout_above="@+id/tab" />

    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/img_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_home_disable" />
            </RelativeLayout>

            <TextView
                android:id="@+id/text"
                style="@style/text_66_black_small"
                android:layout_marginTop="2dp"
                android:text="@string/home_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_comprehensive_disable" />
            </RelativeLayout>

            <TextView
                style="@style/text_66_black_small"
                android:layout_marginTop="2dp"
                android:text="@string/comprehensive_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_collect_disable" />
            </RelativeLayout>

            <TextView
                style="@style/text_66_black_small"
                android:layout_marginTop="2dp"
                android:text="@string/collect_title" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
